--- a/warthog/Makefile
+++ b/warthog/Makefile
@@ -6,7 +6,7 @@ WARTHOG_EXE = $(wildcard programs/*.cpp)
 WARTHOG_TEST = $(wildcard test/*.cpp)
 WARTHOG_OBJ = $(WARTHOG_SRC:%.cpp=obj/%.o)
 EXTRA_OBJ = $(EXTRA_SRC:%.cpp=obj/%.o)
-PYHOG_OBJ = $(PYHOG_SRC:python/src/%.cpp=python/obj/%.o)
+PYHOG_OBJ = $(PYHOG_SRC:%.cpp=obj/%.o)
 
 D_WARTHOG_INCLUDES = -I../../src/ -I../../src/domains -I../../src/util			\
 	-I../../src/search -I../../src/experimental -I../../src/heuristics				\
@@ -19,14 +19,14 @@ D_LIBS = -L./lib -L/usr/local/lib
 
 warthog = ./lib/libwarthog.a
 extra = ./lib/libwarthog-extra.a
-pyhog = ./python/pyhog$(shell python3-config --extension-suffix)
+pyhog = ./lib/pyhog$(shell python3-config --extension-suffix)
 
 CFLAGS = -std=c++11 -pedantic -pthread -Wall -Werror -Wno-conversion \
 	-Wno-unused-result -Wno-unused-but-set-variable -fopenmp
 PYFLAGS = $(CFLAGS) $(shell python3 -m pybind11 --includes) -shared -fPIC
 # PROFILE_CFLAGS = $(DEV_CFLAGS) -pg -DNDEBUG
 
-FLAVOURS = fast dev debug
+FLAVOURS = fast dev debug python
 PROGRAMS = $(WARTHOG_EXE:programs/%.cpp=bin/%)
 PROGRAMS += $(WARTHOG_TEST:.cpp=)
 
@@ -96,18 +96,16 @@ debug: CFLAGS += -ggdb -O3 -gdwarf-4 -no-pie -DQUICK_LOG=3
 debug: build/debug/Makefile		## Opti flags with debug symbols
 	+$(MAKE) -C $(<D) $(ACTIONS)
 
-##@ Build Python binding
-python: $(PYHOG_OBJ) $(pyhog) 	## pyhog: warthog Python bindings
+python: PYFLAGS += -O3 -DNDEBUG -Wno-unused-variable
+python: DIR=build/python
+python:							## Build Python binding
+	@$(shell mkdir -p $(DIR))
+	@$(shell cp make.pyhog $(DIR)/Makefile)
+	+$(MAKE) -C $(DIR) $(ACTIONS)
 
-# -include $(PYHOG_OBJ:.o=.d)
-
-python/obj/%.o: python/src/%.cpp
-	@$(shell mkdir -p $(@D))
-	$(CXX) -c $< -o $@ $(PYFLAGS) $(D_INCLUDES) -MMD -MP -MT $@ -MF $(@:.o=.d)
-
-$(pyhog): $(PYHOG_OBJ)
-	@echo "### Creating Python lib $@ ###"
-	@$(CXX) $(PYFLAGS) -o $@ $^
+# $(pyhog): $(PYHOG_OBJ)
+# 	@echo "### Creating Python lib $@ ###"
+# 	@$(CXX) $(PYFLAGS) -o $@ $^ ./build/fast/lib/libwarthog.a
 
 # Generate the Makefile of the appropriate flavour
 %/Makefile: make.file
