experiments with generalised unidirectional search (plus supporting changes elsewhere)

--- a/warthog/Makefile
+++ b/warthog/Makefile
@@ -19,7 +19,7 @@ warthog = ./lib/libwarthog.a
 extra = ./lib/libwarthog-extra.a
 
 CFLAGS = -std=c++17 -pedantic -pthread -Wall -Werror -Wno-conversion \
-	-Wno-unused-result -Wno-unused-but-set-variable -fopenmp
+	-Wno-unused-result -Wno-unused-but-set-variable -fopenmp -fconcepts
 # PROFILE_CFLAGS = $(DEV_CFLAGS) -pg -DNDEBUG
 
 FLAVOURS = fast dev debug
